Add ability to open new window

--- a/DirectoryViewer/Info.plist
+++ b/DirectoryViewer/Info.plist
@@ -10,7 +10,7 @@
 			<key>CFBundleTypeName</key>
 			<string>Document</string>
 			<key>CFBundleTypeRole</key>
-			<string>Viewer</string>
+			<string>Editor</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>public.directory</string>
